# energy-monitor

./: .gitignore  README.md  compose.yaml  noxfile.py  pylintconfig.toml  pyproject.toml
.github/workflows/: build.yml
flux-queries/: csv-active-energy.flux  live-active-power.flux
importer/: config.py  example-config.py  noxfile.py  pyproject.toml
importer/importer/: analyze.py  config_model.py  db.py  download.py  logger.py  main.py  main_test.py  model.py  shelly.py  shelly_i_test.py  shelly_multiplexer.py  shelly_multiplexer_i_test.py
importer/importer/db/: influx.py  influx_converter.py  influx_converter_test.py  influx_i_test.py
notebooks/: polars-analyze.ipynb
src/: example-config.py  example_config.py  util.py
src/analyze/: data.py  loader.py  main.py  model.py
src/analyzepolar/: loader.py  logger.py  main.py  model.py
src/analyzer/: analyze.py  common.py  loader.py  logger.py  model.py
src/importer/: analyze.py  config.py  config_model.py  main.py  main_test.py  model.py  model_test.py  shelly.py  shelly_i_test.py  shelly_multiplexer.py  shelly_multiplexer_i_test.py
src/importer/db/: influx.py  influx_converter.py  influx_converter_test.py  influx_i_test.py
src/importer/importer/: analyze.py  main.py  model_test.py  shelly.py  shelly_i_test.py  shelly_multiplexer.py  shelly_multiplexer_i_test.py  shelly_test.py
src/importer/importer/db/: influx.py  influx_converter_test.py
src/prohka/: spider.py
tests/analyze/: data_test.py  loader_test.py  model_test.py
tests/analyzepolar/: loader_test.py  main_test.py  model_test.py
tests/analyzer/: model_test.py
