[tool.poetry]
name = "energy-monitor"
version = "0.1.0"
description = "Analyze data from Shelly 3EM"
authors = ["kaklakariada <kaklakariada@users.noreply.github.com>"]
license = "GPL"
readme = "README.md"
packages = [{ include = "importer", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.16.0"
influxdb-client = "^1.49.0"
requests = "^2.32.4"
websockets = "^15.0.1"
pytz = "^2025.2"
tqdm = "^4.67.1"
polars = { extras = ["plot"], version = "^1.31.0" }


[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.4.20250611"
types-tqdm = "^4.67.0.20241119"
types-pytz = "^2024.2.0.20241003"
types-influxdb-client = "^1.45.0.20240915"
mypy = "^1.16.1"
black = { version = "^25.1.0", extras = ["jupyter"] }
nox = "^2025.5.1"
isort = "^6.0.1"
pytest = "^8.4.1"
pylint = "^3.3.7"
testcontainers = "^4.10.0"
jupyterlab = "^4.4.3"
pyarrow = "^20.0.0"                                   # data analysis
jedi-language-server = "^0.45.1"                      # for jupyter
pip = "^25.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "importer.main:main"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
verbose = false

[tool.isort]
profile = "black"
#force_grid_wrap = 2

[tool.pytest.ini_options]
markers = [
    "shelly: marks tests as requiring a real device (deselect with '-m \"not shelly\"')",
]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    #"--log-cli-level=debug",
]
filterwarnings = ["ignore::DeprecationWarning:reactivex.internal.constants"]


[tool.mypy]
explicit_package_bases = true
namespace_packages = true
warn_return_any = true
warn_unused_configs = true
exclude = []
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_subclassing_any = true
disallow_any_generics = false
disallow_any_explicit = false

[tool.pylint.main]
fail-under = 10
source-roots = ["src", "tests"]
suggestion-mode = true

[tool.pylint.format]
max-line-length = 140

[tool.pylint.logging]
logging-format-style = "new"
logging-modules = ["logging"]

[tool.pylint."messages control"]
confidence = [
    "HIGH",
    "CONTROL_FLOW",
    "INFERENCE",
    "INFERENCE_FAILURE",
    "UNDEFINED",
]

disable = [
    # Defaults
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    # Custom
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
    "logging-fstring-interpolation",
    "too-few-public-methods",
    "duplicate-code",
]
