[tool.poetry]
name = "energy-monitor-importer"
version = "0.1.0"
description = "Import data from Shelly 3EM to Influxdb"
authors = ["kaklakariada <kaklakariada@users.noreply.github.com>"]
license = "GPL"
readme = "../README.md"
packages = [{ include = "importer" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
influxdb-client = "^1.43.0"
requests = "^2.32.1"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20240521"
types-tqdm = "^4.66.0.3"
types-pytz = "^2024.1.0.20240417"
types-influxdb-client = "^1.43.0.20240519"
mypy = "^1.6.1"
black = "^24.3.0"
nox = "^2023.4.22"
isort = "^5.12.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "importer.main:main"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
verbose = false

[tool.isort]
profile = "black"
#force_grid_wrap = 2

[tool.pytest.ini_options]
markers = [
    "shelly: marks tests as requiring a real device (deselect with '-m \"not shelly\"')",
]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--log-cli-level=debug",
]
